# numeric-eda-helper

./: CHANGELOG.md  CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
docs/: example.ipynb
src/numeric-eda-helper/: overview.py
src/numeric_edahelper/: flag_outliers.py  get_correlated_features.py  missing_imputer.py
tests/: test_flag_outliers.py  test_get_correlated_features.py  test_missing_imputer.py  test_overview.py
