[tool.poetry]
name = "numeric_edahelper"
version = "0.1.0"
description = "Exploratory data analysis package for data that is numeric in nature."
authors = ["Sam Quist"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.5"
numpy = "^1.22.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
